--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,35 @@
 * {
     color: white;
-    background-color: rgb(15, 15, 15);
-    outline: 2px solid rgb(128, 128, 226);
+    background-color: rgb(0, 0, 0);
+    /* outline: 2px solid rgb(128, 128, 226); */
 }
 
-.anchors {
-    color: rgb(0, 255, 255);
+.anchors
+{
+    text-decoration: none;
 }
 
-div {
-       
+.logo-container{
+    display: flex;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.logo {
+    opacity: 0;
+    transition: opacity 2s ease-in, transform 2s ease-in-out;
+    fill: #FFF;
+    cursor: pointer;
+    flex: 1;
 }
 
-img {
-    
+.logo.shrink {
+    opacity: 1;
+    transform: scale(0.5); /* Shrink logo */
+    transition: transform 0.5s ease-in-out;
+}
+.fade-in {
+    opacity: 1;
 }
 
 .image-grid { /* Flexbox container for images */
