--- a/css/styles.css
+++ b/css/styles.css
@@ -2,35 +2,91 @@
     color: white;
     background-color: rgb(0, 0, 0);
     /* outline: 2px solid rgb(128, 128, 226); */
+    margin: 0;
 }
 
-.anchors
+a
 {
-    text-decoration: none;
+    text-decoration: none; /* Removes underline from links */
 }
 
-.logo-container{
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+ol {
+    list-style: none;
+}
+
+.logo-container {
     display: flex;
-    position: relative;
-    width: 100%;
-    height: 100%;
+    justify-content: center;
+    align-items: center;
 }
 .logo {
     opacity: 0;
-    transition: opacity 2s ease-in, transform 2s ease-in-out;
+    max-width: 100%;
+    max-height: 100%;
     fill: #FFF;
     cursor: pointer;
-    flex: 1;
 }
 
-.logo.shrink {
-    opacity: 1;
-    transform: scale(0.5); /* Shrink logo */
-    transition: transform 0.5s ease-in-out;
-}
 .fade-in {
-    opacity: 1;
+    transition: opacity 1s ease-in;
+    opacity : 1;
 }
+
+.fade-out {
+    transition: opacity 1s ease-out;
+    opacity : 0;
+}
+
+.nav {
+    display: flex;
+    overflow: hidden;
+    justify-content: space-between;
+    width: 100%;
+    height: 7vw;
+    align-items: center;
+    justify-content: center;
+    /* outline: 1px solid rgb(255, 255, 255); */
+}
+
+.nav-logo {
+    display: flex;
+    opacity: 1;
+    fill: #FFF;
+    width: 20vw;
+    height: 20vw;
+    cursor: pointer;
+    /* padding: 0;
+    outline: 2px solid rgb(255, 255, 255); */
+}
+
+.text-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* Two columns */
+
+}
+
+.text-grid > a {
+    padding: 10px;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    font-size: 3vw;
+}
+
+.text-grid > a:nth-child(odd) {
+    justify-self: start; 
+}
+
+.text-grid > a:nth-child(even) {
+    justify-self: end; /* Right column items aligned to the right */
+}
+
 
 .image-grid { /* Flexbox container for images */
     display: flex;
@@ -48,13 +104,4 @@
 
     max-width: calc(33.33% - 10px); /* Ensures images don't exceed 50% width */
     object-fit: contain;
-}
-
-
-button {
-    margin: 10px;
-    padding: 10px;
-    cursor: pointer;
-    border: none;
-    justify-self: center;
 }
