--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,9 @@
     margin: 0;
 }
 
-a
-{
-    text-decoration: none; /* Removes underline from links */
+a {
+    text-decoration: none;
+    /* Removes underline from links */
 }
 
 ul {
@@ -25,6 +25,7 @@ ol {
     justify-content: center;
     align-items: center;
 }
+
 .logo {
     opacity: 0;
     max-width: 100%;
@@ -35,12 +36,12 @@ ol {
 
 .fade-in {
     transition: opacity 1s ease-in;
-    opacity : 1;
+    opacity: 1;
 }
 
 .fade-out {
     transition: opacity 1s ease-out;
-    opacity : 0;
+    opacity: 0;
 }
 
 .nav {
@@ -59,49 +60,91 @@ ol {
     opacity: 1;
     fill: #FFF;
     width: 20vw;
-    height: 20vw;
+    height: max-content;
+
     cursor: pointer;
     /* padding: 0;
     outline: 2px solid rgb(255, 255, 255); */
 }
 
-.text-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr; /* Two columns */
+.bottom-bar {
+    display: flex;
+    justify-content: space-between;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: max-content;
 
+    /* outline: 1px solid rgb(255, 255, 255); */
 }
 
-.text-grid > a {
-    padding: 10px;
+.bottom-bar a {
+    padding-left: 3vw;
+    padding-right: 3vw;
+    padding-top: 1vw;
+    padding-bottom: 1vw;
     text-align: center;
     color: white;
     text-decoration: none;
     font-size: 3vw;
 }
 
-.text-grid > a:nth-child(odd) {
-    justify-self: start; 
+.text-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    /* Two columns */
+
 }
 
-.text-grid > a:nth-child(even) {
-    justify-self: end; /* Right column items aligned to the right */
+.text-grid>a {
+    padding-top: 1vw;
+    padding-bottom: 1vw;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    font-size: 3vw;
+   
+}
+
+a:hover {
+    transform: scale(1.1);
+}
+
+svg:hover {
+    transform: scale(1.1);
+}
+
+.text-grid>a:nth-child(odd) {
+    padding-left: 3vw;
+    justify-self: start;
+}
+
+.text-grid>a:nth-child(even) {
+    padding-right: 3vw;
+    justify-self: end;
+    /* Right column items aligned to the right */
 }
 
 
-.image-grid { /* Flexbox container for images */
+.image-grid {
+    /* Flexbox container for images */
     display: flex;
     flex-wrap: wrap;
-    gap: 10px; /* Adds space between images */
+    gap: 10px;
+    /* Adds space between images */
     padding: 10px;
 }
 
-.image-grid img { /* Flexbox items (images) */
-    flex: 1 1 calc(33.33% - 10px); /* Adjusts to 50% width minus the gap */
+.image-grid img {
+    /* Flexbox items (images) */
+    flex: 1 1 calc(33.3% - 10px);
+    /* Adjusts to 50% width minus the gap */
     /* flex-grow | flex-shrink | flex-basis | are shortened to flex, the shorthand for it */
     /* grow and shrink the same */
-    
-    /* basis defines the size of an item before the remaining space is distributed, inthis case, it is being calculated to spread them eavenly in 3 columns (33.33%) */
 
-    max-width: calc(33.33% - 10px); /* Ensures images don't exceed 50% width */
+    /* basis defines the size of an item before the remaining space is distributed, inthis case, it is being calculated to spread them eavenly in 3 columns (25%) */
+
+    max-width: calc(33.3% - 10px);
+    /* Ensures images don't exceed 50% width */
     object-fit: contain;
 }
