--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,11 @@ a {
     /* Removes underline from links */
 }
 
+a:hover {
+    transform: scale(1.1);
+}
+
+
 ul {
     list-style: none;
     margin: 0;
@@ -67,15 +72,17 @@ ol {
     outline: 2px solid rgb(255, 255, 255); */
 }
 
+.nav-logo>svg:hover {
+    transform: scale(1.1);
+}
+
 .bottom-bar {
     display: flex;
-    justify-content: space-between;
     position: fixed;
-    bottom: 0;
+    bottom: 3vw;
     width: 100%;
-    height: max-content;
-
-    /* outline: 1px solid rgb(255, 255, 255); */
+    max-width: 100%;
+    justify-content: space-evenly;
 }
 
 .bottom-bar a {
@@ -87,6 +94,21 @@ ol {
     color: white;
     text-decoration: none;
     font-size: 3vw;
+}
+
+.bottom-bar-copyright {
+    display: flex;
+    justify-content: space-evenly;
+}
+.bottom-bar-copyright p {   
+    position: fixed;
+    bottom: 0;
+    padding-left: 3vw;
+    padding-right: 3vw;
+    padding-top: 1vw;
+    padding-bottom: 1vw;
+    text-decoration: none;
+    font-size: 1vw;
 }
 
 .text-grid {
@@ -103,16 +125,10 @@ ol {
     color: white;
     text-decoration: none;
     font-size: 3vw;
-   
 }
 
-a:hover {
-    transform: scale(1.1);
-}
 
-svg:hover {
-    transform: scale(1.1);
-}
+
 
 .text-grid>a:nth-child(odd) {
     padding-left: 3vw;
